# logikon

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/api-docs/: README.md  index.html  logikon.debuggers.base.md  logikon.debuggers.exporters.md  logikon.debuggers.exporters.networkx_exporter.md  logikon.debuggers.exporters.svgmap_exporter.md  logikon.debuggers.factory.md  logikon.debuggers.interface.md  logikon.debuggers.md  logikon.debuggers.model_registry.md  logikon.debuggers.reconstruction.claim_extractor.md  logikon.debuggers.reconstruction.informal_argmap_builder.md  logikon.debuggers.reconstruction.issue_builder_lmql.md  logikon.debuggers.reconstruction.lmql_debugger.md  logikon.debuggers.reconstruction.lmql_queries.md  logikon.debuggers.reconstruction.md  logikon.debuggers.reconstruction.pros_cons_builder_lmql.md  logikon.debuggers.registry.md  logikon.debuggers.scorers.argmap_graph_scores.md  logikon.debuggers.scorers.md  logikon.debuggers.utils.md  logikon.html  logikon.schemas.argument_mapping.md  logikon.schemas.configs.md  logikon.schemas.md  logikon.schemas.pros_cons.md  logikon.schemas.results.md  logikon.score.md  search.js
docs/api-docs/logikon/: __about__.html  analysts.html  debuggers.html  schemas.html  score.html  utils.html
docs/api-docs/logikon/analysts/: base.html  director.html  export.html  interface.html  lmql_analyst.html  lmql_queries.html  reconstruction.html  registry.html  score.html
docs/api-docs/logikon/analysts/export/: htmlsunburst_exporter.html  networkx_exporter.html  svgmap_exporter.html
docs/api-docs/logikon/analysts/reconstruction/: fuzzy_argmap_builder.html  issue_builder_lmql.html  pros_cons_builder_lmql.html  relevance_network_builder_lmql.html
docs/api-docs/logikon/analysts/score/: argmap_graph_scores.html  balance_scores.html
docs/api-docs/logikon/debuggers/: base.html  exporters.html  factory.html  interface.html  model_registry.html  reconstruction.html  registry.html  scorers.html  utils.html
docs/api-docs/logikon/debuggers/exporters/: htmlsunburst_exporter.html  networkx_exporter.html  svgmap_exporter.html
docs/api-docs/logikon/debuggers/reconstruction/: claim_extractor.html  fuzzy_argmap_builder.html  informal_argmap_builder.html  issue_builder_lmql.html  lmql_debugger.html  lmql_queries.html  pros_cons_builder_lmql.html  relevance_network_builder_lmql.html
docs/api-docs/logikon/debuggers/scorers/: argmap_graph_scores.html
docs/api-docs/logikon/schemas/: argument_mapping.html  configs.html  pros_cons.html  results.html
docs/api-docs/logikon/utils/: model_registry.html  prompt_templates_registry.html
docs/guided_reasoning_introduction/: bib_all.bib  intro_guided_reasoning.qmd  intro_guided_reasoning.tex
examples/: README.md  basic_usage.ipynb  delib_agent_chat.ipynb  evaluate.py  evaluations.ipynb  legal_hallucination_detection.ipynb  metrics_artifacts_zoo.ipynb  monitor_cot_workflow.ipynb  quickstart.ipynb  requirements.txt  scoring.py  setup.sh  simple_health_checks.ipynb  test_classifier.ipynb  test_logits_models.ipynb
scripts/: run_vllm_server.sh  setup.sh
src/logikon/: __about__.py  __init__.py  score.py
src/logikon/analysts/: base.py  classifier_queries.py  director.py  interface.py  lcel_analyst.py  lcel_queries.py  lmql_analyst.py  lmql_queries.py  registry.py
src/logikon/analysts/export/: htmlsunburst_exporter.py  networkx_exporter.py  svgmap_exporter.py
src/logikon/analysts/reconstruction/: fuzzy_argmap_builder.py  issue_builder_lcel.py  issue_builder_lmql.py  pros_cons_builder_lcel.py  pros_cons_builder_lmql.py  relevance_network_builder_lcel.py  relevance_network_builder_lmql.py
src/logikon/analysts/score/: argmap_graph_scores.py  balance_scores.py
src/logikon/backends/: chat_models_with_grammar.py  classifier.py  grammar_mixins.py  multiple_choice.py
src/logikon/debuggers/: base.py  factory.py  interface.py  registry.py  utils.py
src/logikon/debuggers/exporters/: htmlsunburst_exporter.py  networkx_exporter.py  svgmap_exporter.py  svgsunburst_exporter.py
src/logikon/debuggers/reconstruction/: claim_extractor.py  fuzzy_argmap_builder.py  fuzzy_argmap_builder_lmql.py  informal_arg_map.py  informal_argmap_builder.py  issue_builder_lmql.py  lmql_debugger.py  lmql_queries.py  pros_cons_builder_lmql.py  relevance_network_builder_lmql.py
src/logikon/debuggers/scorers/: argmap_graph_scores.py
src/logikon/guides/: base.py
src/logikon/guides/proscons/: recursive_balancing_guide.py
src/logikon/schemas/: argument_mapping.py  configs.py  pros_cons.py  results.py
src/logikon/utils/: argdown.py  model_registry.py  prompt_templates_registry.py
tests/: test_argdownutils.py  test_argmap_scorers.py  test_argumentmapping.py  test_balance_scorers.py  test_claim_extractor.py  test_configs.py  test_debugger.py  test_debugger_factory.py  test_fuzzy_argmap_builder.py  test_htmlsunburst_exporter.py  test_informal_argmap_debugger.py  test_nx_exporter.py  test_pros_cons_builder.py  test_relevance_network_builder.py  test_score.py  test_svgmap_exporter.py  test_svgsunburst_exporter.py
