[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logikon"
dynamic = ["version"]
description = 'Debugging and Scoring Reasoning Traces of LLMs'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Gregor Betz", email = "3662782+ggbetz@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "langchain",
  "openai",
  "huggingface_hub",
  "pydantic>=2.3.0",
  "graphviz>=0.20.1",
  "Unidecode>=1.3.6",
  "networkx>=3.1",
]

[project.urls]
Documentation = "https://github.com/logikon-ai/logikon#readme"
Issues = "https://github.com/logikon-ai/logikon/issues"
Source = "https://github.com/logikon-ai/logikon"

[tool.hatch.version]
path = "src/logikon/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "llama-cpp-python",
  "coverage[toml]>=6.5",
  "pytest",
  "python-dotenv",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.cuda]
dependencies = [
  "vllm",
  "python-dotenv",
]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "langchain",
  "openai",
  "huggingface_hub",
  "llama-cpp-python",
  "pydantic>=2.3.0",
  "typing_extensions==4.7.1",
  "typing-inspect==0.9.0",
  "Unidecode>=1.3.6",
  "networkx-stubs",
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --ignore --install-types --non-interactive {args:src/logikon tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.pytest]
log_cli=true

[tool.mypy]
plugins="pydantic.mypy"

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["logikon"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["logikon", "tests"]
branch = true
parallel = true
omit = [
  "src/logikon/__about__.py",
]

[tool.coverage.paths]
logikon = ["src/logikon", "*/logikon/src/logikon"]
tests = ["tests", "*/logikon/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
