[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logikon"
dynamic = ["version"]
description = 'Debugging and Scoring Reasoning Traces of LLMs'
readme = "README.md"
requires-python = ">=3.7"
license = "AGPL-3.0-only"
keywords = []
authors = [
  { name = "Gregor Betz", email = "3662782+ggbetz@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "graphviz>=0.20.1",
  "huggingface_hub",
  "langchain",
  "langchain_openai",
  "langchain_community==0.2.12",
  "networkx>=3.1",
  "plotly",
  "pydantic>=1.10.0",
  "seaborn",
  "tenacity",
  "transformers",
  "tqdm",
  "Unidecode>=1.3.6",
]

[project.optional-dependencies]
vllm = [
  "vllm>=0.3.3",
  "flash-attn>=2.5.6",
  "hf_transfer",
  "python-dotenv",
]

[project.urls]
Documentation = "https://github.com/logikon-ai/logikon#readme"
Issues = "https://github.com/logikon-ai/logikon/issues"
Source = "https://github.com/logikon-ai/logikon"

[tool.hatch.version]
path = "src/logikon/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "langchain",
  "langchain_openai",
  "coverage[toml]>=6.5",
  "pydantic>=2.0.0",
  "typer",
  "pytest",
  "python-dotenv",
  "pdoc",
  "pydocstyle",
  "transformers",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
docstyle = "pydocstyle ./src"
apidocs = """pdoc \
    --output-directory="./docs/api-docs" \
    --mermaid \
    logikon
    """
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.vllm]
dependencies = [
  "vllm>=0.3.3",
  "hf_transfer",
  "python-dotenv",
]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "langchain",
  "langchain_openai",
  "huggingface_hub",
  "pydantic>=2.0.0",
  "typing_extensions==4.7.1",
  "typing-inspect==0.9.0",
  "types-requests",
  "Unidecode>=1.3.6",
  "networkx-stubs",
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --ignore --install-types --non-interactive {args:src/logikon tests}"
style = [
  "ruff check {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff check --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]
[tool.hatch.metadata]
allow-direct-references=true

[tool.pytest]
log_cli=true

[tool.mypy]
plugins="pydantic.mypy"

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
lint.select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore cryptography checks
  "S311",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
lint.unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.lint.isort]
known-first-party = ["logikon"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
# LMQL queries may exceed the line length limit
"src/logikon/analysts/reconstruction/pros_cons_builder_lmql.py" = ["E501"]
"src/logikon/analysts/reconstruction/relevance_network_builder_lmql.py" = ["E501"]

[tool.coverage.run]
source_pkgs = ["logikon", "tests"]
branch = true
parallel = true
omit = [
  "src/logikon/__about__.py",
]

[tool.coverage.paths]
logikon = ["src/logikon", "*/logikon/src/logikon"]
tests = ["tests", "*/logikon/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
